# gst-gpac-plugin

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: release-please.json
.github/workflows/: codeql.yml  commitlint.yml  coverage.yml  release.yml  test.yml
include/: config.h  gpacmessages.h  utils.h
include/elements/: common.h  gstgpacsink.h  gstgpactf.h
include/lib/: caps.h  main.h  memio.h  packet.h  pid.h  properties.h  session.h  signals.h  time.h
include/lib/filters/: filters.h
scripts/: graph2png.sh
src/: gstgpacplugin.c
src/elements/: gstgpacsink.c  gstgpactf.c
src/lib/: caps.c  main.c  memio.c  packet.c  pid.c  properties.c  session.c  signals.c  time.c
src/lib/conversion/packet/: handlers.c  registry.h
src/lib/conversion/pid/: caps_handlers.c  common.h  default_handlers.c  query_handlers.c  registry.h  segment_handlers.c  tags_handlers.c
src/lib/filters/: dasher.c  generic.c  mp4mx.c
src/lib/handlers/: caps_handlers.c  common.h  default_handlers.c  query_handlers.c  segment_handlers.c  tags_handlers.c
src/lib/post-process/: common.h  dasher.c  generic.c  mp4mx.c  registry.h
tests/: CMakeLists.txt  README.md
tests/src/: codecs.cc  common.hpp  dashersink.cc  live.cc  misc.cc  mp4mx_cross.cc  splitmux.cc  state_transition.cc
tests/src/helper/: common.hpp  smemcapture.hpp
